Created Tools Class - Continuation of Prev.

--- a/Muhasebe/Muhasebe.ORM/Muhasebe.ORM.csproj
+++ b/Muhasebe/Muhasebe.ORM/Muhasebe.ORM.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="ORMBase.cs" />
     <Compile Include="Tables\Users.cs" />
+    <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
