--- a/Muhasebe/Muhasebe.ORM/app.config
+++ b/Muhasebe/Muhasebe.ORM/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Muhasebe.ORM.Properties.Settings.MuhasebeConnectionString"
+        <add name="MuhasebeConnection_Local"
             connectionString="Data Source=EGEMEN-PC\SQLEXPRESS;Initial Catalog=Muhasebe;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
