--- a/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
+++ b/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableObjects.cs" />
-    <Compile Include="Users.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
