--- a/Muhasebe/Muhasebe.ORMs/Muhasebe.ORMs.csproj
+++ b/Muhasebe/Muhasebe.ORMs/Muhasebe.ORMs.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C4E47034-453B-4708-B57F-72F1F01515B6}</ProjectGuid>
+    <ProjectGuid>{CA38A87F-CEEE-44A0-8F2E-BCD98191F63B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Muhasebe.ORM</RootNamespace>
@@ -43,16 +43,38 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IORM.cs" />
-    <Compile Include="ORMBase.cs" />
+    <Compile Include="MuhasebeDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MuhasebeDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tables\Users.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="ORMBase.cs" />
+    <Compile Include="Tables\UsersORM.cs" />
     <Compile Include="Tools.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Muhasebe.Entity\Muhasebe.Entity.csproj">
-      <Project>{101c0da7-e681-4f4a-9418-574fbc6b6a39}</Project>
-      <Name>Muhasebe.Entity</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="MuhasebeDataSet.xsc">
+      <DependentUpon>MuhasebeDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MuhasebeDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MuhasebeDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MuhasebeDataSet.xss">
+      <DependentUpon>MuhasebeDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
