--- a/Muhasebe/Muhasebe/App.config
+++ b/Muhasebe/Muhasebe/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="MuhasebeConnection_Local"
+            connectionString="Data Source=EGEMEN-PC\SQLEXPRESS;Initial Catalog=Muhasebe;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
