--- a/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
+++ b/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Current.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableObjects.cs" />
     <Compile Include="User.cs" />
