Search and Design

--- a/Muhasebe/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe/Muhasebe.csproj
@@ -123,6 +123,8 @@
       <Name>Muhasebe.ORM</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ThingsToDo.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
