--- a/Muhasebe/Muhasebe.ORM/Muhasebe.ORM.csproj
+++ b/Muhasebe/Muhasebe.ORM/Muhasebe.ORM.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ORMBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\Current\CurrentList.cs" />
+    <Compile Include="Tables\Current\Transactions.cs" />
     <Compile Include="Tables\User.cs" />
     <Compile Include="Tools.cs" />
   </ItemGroup>
