--- a/Muhasebe/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe/Muhasebe.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Pages\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.Designer.cs">
+      <DependentUpon>Add_Transactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\SubPages\Current\List.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.resx">
+      <DependentUpon>Add_Transactions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\SubPages\Current\List.resx">
       <DependentUpon>List.cs</DependentUpon>
@@ -135,5 +144,6 @@
   <ItemGroup>
     <Content Include="ThingsToDo.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
