--- a/Muhasebe/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe/Muhasebe.csproj
@@ -64,11 +64,11 @@
     <Compile Include="Pages\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Transactions_Add.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.Designer.cs">
-      <DependentUpon>Add_Transactions.cs</DependentUpon>
+    <Compile Include="Pages\SubPages\Current\AddsAndRemoves\Transactions_Add.Designer.cs">
+      <DependentUpon>Transactions_Add.cs</DependentUpon>
     </Compile>
     <Compile Include="Pages\SubPages\Current\List.cs">
       <SubType>UserControl</SubType>
@@ -90,14 +90,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="LoginRegister.resx">
       <DependentUpon>LoginRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pages\SubPages\Current\AddsAndRemoves\Add_Transactions.resx">
-      <DependentUpon>Add_Transactions.cs</DependentUpon>
+    <EmbeddedResource Include="Pages\SubPages\Current\AddsAndRemoves\Transactions_Add.resx">
+      <DependentUpon>Transactions_Add.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\SubPages\Current\List.resx">
       <DependentUpon>List.cs</DependentUpon>
