--- a/Muhasebe/Muhasebe/Muhasebe.csproj
+++ b/Muhasebe/Muhasebe/Muhasebe.csproj
@@ -88,11 +88,14 @@
     <Compile Include="Pages\SubPages\Homepage.Designer.cs">
       <DependentUpon>Homepage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pages\SubPages\Stock\StockList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\SubPages\Stock\StockList.Designer.cs">
+      <DependentUpon>StockList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <EmbeddedResource Include="LoginRegister.resx">
       <DependentUpon>LoginRegister.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\SubPages\Homepage.resx">
       <DependentUpon>Homepage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\SubPages\Stock\StockList.resx">
+      <DependentUpon>StockList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
