--- a/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
+++ b/Muhasebe/Muhasebe.Entity/Muhasebe.Entity.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Current.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock.cs" />
     <Compile Include="TableObjects.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
