Returning after broke

--- a/Muhasebe/Muhasebe/App.config
+++ b/Muhasebe/Muhasebe/App.config
@@ -3,8 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MuhasebeConnection_Local"
+        <add name="MuhasebeConnection_Local_Old"
             connectionString="Data Source=EGEMEN-PC\SQLEXPRESS;Initial Catalog=Muhasebe;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+      <add name="MuhasebeConnection_Local"
+            connectionString="Data Source=EGEMEN-PC;Initial Catalog=Muhasebe;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
